applications/orders-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  namespace: applications
  labels:
    app.kubernetes.io/name: orders-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: orders-svc
